--- a/style.css
+++ b/style.css
@@ -45,9 +45,12 @@ hr{
     cursor: pointer;
     transition: all 0.3s;
 }
-.btn:hover{
+.btn:hover:not([disabled]){
     background: #222;
     color: #fff;
+}
+.btn:disabled{
+    cursor: no-drop;
 }
 #next-btn{
     background: #001e4d;
@@ -60,5 +63,10 @@ hr{
     border-radius: 4px;
     cursor: pointer;
     display: none;
-
+}
+.correct{
+    background: #9aeabc;
+}
+.incorrect{
+    background: #ff9393;
 }
